@@ -1,0 +1,3 @@
+#Fri Feb 05 15:53:03 CET 2010
+eclipse.preferences.version=1
+encoding//libfritz++/FritzFonbook.cpp=ISO-8859-15
