@@ -18,6 +18,9 @@ clean:
 	@-rm ../kfritz-${VERSION}.orig.tar.gz
 	@-rm -rf build
 
+install: all
+	cd build; kdesudo make install
+
 deb:
 	debuild -i"(\.svn|\.settings|\.(c|cdt|)project)"
 
@@ -28,11 +31,13 @@ deb-src: clean
 	        -f ../kfritz_${VERSION}.orig.tar.gz ../kfritz
 	debuild -S -i"(\.svn|\.settings|\.(c|cdt|)project)"
 	
-$(POTFILE):
-	xgettext --from-code=UTF-8 -C -kde -ci18n -ki18n:1 -ki18nc:1c,2 -ki18np:1,2 -ki18ncp:1c,2,3 -ktr2i18n:1 \
+i18n: $(POFILES)
+	
+$(POTFILE): $(wildcard *.cpp)
+	xgettext --from-code=UTF-8 -C -kde -ci18n -ki18n:1 -ki18nc:1c,2 -ki18np:1,2 -ki18ncp:1c,2,3 -ktr2i18n:1\
 	         -kI18N_NOOP:1 -kI18N_NOOP2:1c,2 -kaliasLocale -kki18n:1 -kki18nc:1c,2 -kki18np:1,2 -kki18ncp:1c,2,3 \
 	         --msgid-bugs-address="kfritz@joachim-wilke.de" \
-	         -D ${WDIR} -o po/kfritz.pot *.h *.cpp *.kcfg *.rc build/*.h
+	         -D ${WDIR} -o po/kfritz.pot *.h *.cpp *.kcfg *.rc build/*.h libfritz++/*.cpp libfritz++/*.h
 	         
 po/%.po: $(POTFILE)
 	msgmerge -U --no-wrap -F --backup=none -q $@ $<
